k8s/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  labels:
      app: counter-demo
spec:
  ports:
    - port: 8080
  selector:
    app: counter-demo
    tier: app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  labels:
    app: counter-demo
spec:
  replicas: 10
  selector:
    matchLabels:
      app: counter-demo
      tier: app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: counter-demo
        tier: app
    spec:
      containers:
      - image: anoop/counter-demo:latest
        name: counter-demo
        ports:
        - containerPort: 8080
          name: counter-demo
