k8s/db.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: noop
  labels:
    app: redis
spec:
  ports:
    - port: 6379
  selector:
    app: counter-demo
    tier: db
  type: ClusterIP
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: db
  namespace: noop
  labels:
    app: counter-demo
spec:
  selector:
    matchLabels:
      app: counter-demo
      tier: db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: counter-demo
        tier: db
    spec:
      containers:
      - image: redis:latest
        name: redis
        ports:
        - containerPort: 6379
          name: redis
        volumeMounts:
        - name: redis-storage
          mountPath: /data
      volumes:
      - name: redis-storage
        persistentVolumeClaim:
          claimName: noop-pv-claim
